# VAULT

./: .env  .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: crypto.rs  lib.rs
gongo/: Cargo.toml
gongo/src/: crypto.rs  error.rs  lib.rs  vaultfile.rs
gongo/src/crypto/: crypto.rs  generation.rs  key_deriving.rs  mod.rs
migrations/: 20260223100028_init.sql
password_backend/: Cargo.toml  vault.db
password_backend/migrations/: 20260209202933_create_initial_tables.sql  20260212170658_init.sql
password_backend/src/: main.rs
password_backend/src/api/: mod.rs  signup.rs
