[workspace]
members = [
"password_backend",
    "gongo"
]

resolver = "2"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
argon2 = "0.5.3"
sqlx = { version = "0.8.6", features = ["sqlite"]}
tokio = { version = "1.49.0", features = ["full"] }
env_logger = "0.11.9"
log = "0.4.28"
gongo = {path = "gongo"}
