[workspace]
members = [
"password_backend",
    "gongo"
]

resolver = "2"

[workspace.dependencies]
aes-gcm = { version = "0.10.3" }
argon2 = "0.5.3"
sqlx = { version = "0.8.6", features = ["sqlite"]}
tokio = { version = "1.49.0", features = ["full"] }
env_logger = "0.11.9"
log = "0.4.28"
gongo = {path = "gongo"}
uuid = { version = "1.20.0", features = ["v4", "serde"]}
serde = "1.0.228"
postcard = "1.1.3"
zeroize = {version = "1.8.2", features = ["zeroize_derive", "serde"]}
url = {version = "2.5.8", features = ["serde"]}
thiserror = "2.0.18"
