[package]
name = "gongo"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true }
argon2 = {workspace = true}
sqlx = {workspace = true}
tokio = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
uuid = {workspace = true}
serde = {workspace = true}
postcard = {workspace = true}
zeroize = {workspace = true}
url = {workspace = true}
thiserror = {workspace = true}
exn = {workspace = true}
bip39 = {workspace = true}
