[package]
name = "password_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
argon2 = "0.5.3"
sqlx = {workspace = true}
tokio = {workspace = true}
gongo = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
postcard = {workspace = true}
